add email for rejected receipt

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -57,6 +57,10 @@
             }
         }
 
+        p{
+            font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;
+        }
+
         @media all {
             .ExternalClass {
                 width: 100%;
