--- a/app/templates/include/email_line_start.html
+++ b/app/templates/include/email_line_start.html
@@ -1,1 +1,1 @@
- <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;{{ extra_style }}">
+ <p style="{{ extra_style }}">
