--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -2,22 +2,15 @@
 {% block preheader %}Travel reimbursement award for {{ h_name }}{% endblock %}
 
 {% block content %}
-    {% include 'include/email_line_start.html' %}
-    Congrats {{ app.user.nickname }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
+<p>    Congrats {{ app.user.nickname }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
     reimburse you <b>{{ reimb.assigned_money }}{{ h_currency }}</b> as you are coming from {{ reimb.origin_city }} ({{ reimb.origin_country }}).
     <b>You have {{ h_r_days }} days to submit a receipt of your tickets.</b>
-    {% include 'include/email_line_end.html' %}
+</p>
     {% include 'include/email_button.html' with text='Submit receupt' url=form_url %}
-    {% include 'include/email_line_start.html' %}
-    In order to receive your travel reimbursement, remember to confirm your attendance as soon as possible. Here you can
-    do it:
-    {% include 'include/email_line_end.html' %}
-    {% include 'include/email_line_start.html' with extra_style='text-align:center;' %}
-    <a href="{{ confirm_url }}">Confirm</a>
-    {% include 'include/email_line_end.html' %}
-    {% include 'include/email_line_start.html' %}
+    {% include 'mails/include/confirm_reimbursement.html' %}
+    <p>
     If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
     as shown in your passport.
-    {% include 'include/email_line_end.html' %}
+    </p>
     {% include 'mails/include/closing.html' %}
 {% endblock %}
