refactor to simplify email management

--- a/applications/templates/mails/include/arrival_departure_info.html
+++ b/applications/templates/mails/include/arrival_departure_info.html
@@ -1,4 +1,2 @@
-{% include 'include/email_line_start.html' %}
-{% if h_arrive %}<b>When to arrive</b> {{ h_arrive }}<br><br>{% endif %}
-{% if h_leave %}<b>When to leave</b> {{ h_leave }}{% endif %}
-{% include 'include/email_line_end.html' %}
+{% if h_arrive %}<p><b>When to arrive</b> {{ h_arrive }}</p>{% endif %}
+{% if h_leave %}<p><b>When to leave</b> {{ h_leave }}</p>{% endif %}
