--- a/applications/templates/mails/confirmation_message.html
+++ b/applications/templates/mails/confirmation_message.html
@@ -2,16 +2,12 @@
 {% block preheader %}Confirmation of attendance for {{ h_name }}{% endblock %}
 
 {% block content %}
-    {% include 'include/email_line_start.html' %}
-    Thank you {{ name }} for confirming your attendance to  {{ h_name }}!<br><br>
-    We are really excited to host this event and have you with us.
-    <br><br>
-    In order to make registration go smoother, please show us this QR code during the process so we can easily find you:
-    {% include 'include/email_line_end.html' %}
-    {% include 'include/email_image.html' with url=qr_url %}
-    {% include 'include/email_line_start.html' %}
+    <p>Thank you {{ name }} for confirming your attendance to  {{ h_name }}!</p>
+    <p>We are really excited to host this event and have you with us.</p>
+
+    <p>In order to make registration go smoother, please show us this QR code during the process so we can easily find you:</p>p
+    {% include 'mails/include/email_image.html' with url=qr_url %}
     {% include 'mails/include/cancel.html' %}
-    {% include 'include/email_line_end.html' %}
     {% include 'mails/include/arrival_departure_info.html' %}
     {% include 'mails/include/closing.html' %}
 {% endblock %}
