--- a/applications/templates/mails/invitation_message.html
+++ b/applications/templates/mails/invitation_message.html
@@ -2,23 +2,24 @@
 {% block preheader %}Acceptance email for {{ h_name }}{% endblock %}
 
 {% block content %}
-    {% include 'include/email_line_start.html' %}
-    Congratulations {{ name }}, you have been officially invited to <b>{{ h_name }}</b>!<br><br>
-    Respond to this invitation by clicking on the "Confirm" link below.
-    <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
-        hacker on the waitlist.</b>
-    {% include 'include/email_line_end.html' %}
-    {% include 'include/email_button.html' with text='Confirm' url=confirm_url %}
+    <p>
+        Congratulations {{ name }}, you have been officially invited to <b>{{ h_name }}</b>!
+    </p>
+    <p>
+        Respond to this invitation by clicking on the "Confirm" link below.
+        <b>Please confirm your spot within 5 days of receiving this email. Otherwise we will give your spot to another
+            hacker on the waitlist.</b>
+    </p>
+    {% include 'mails/include/email_button.html' with text='Confirm' url=confirm_url %}
     {% include 'mails/include/cancel.html' %}
-    {% include 'include/email_line_end.html' %}
-    {% if reimbursement %}
-        {% include 'include/email_line_start.html' %}
-{#        If you have been granted reimbursement you will receive a separate email with all the information in the next few hours.#}
-            Unfortunately, we don't have enough budget to cover your travel expenses. We would like to have enough money for
-            everyone but our budget is limited. Hope to see you in Barcelona! If you can't attend, please cancel your application invite so we can offer your spot to another hacker.
-        {% include 'include/email_line_end.html' %}
+    {% if reimb.waitlisted %}
+        {% include 'include/waitlisted_reimbursement.html' %}
+    {% elif reimb %}
+        <p>
+            Your reimbursement petition is being reviewed by our staff. Check your email in the next few days for an
+            update.
+        </p>
     {% endif %}
-    {% include 'include/email_line_start.html' %}
     {% include 'mails/include/arrival_departure_info.html' %}
     {% include 'mails/include/closing.html' %}
 {% endblock %}
