--- a/reimbursement/templates/reimbursement_review.html
+++ b/reimbursement/templates/reimbursement_review.html
@@ -7,21 +7,23 @@
 {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 {% endblock %}
 {% block body %}
     <div class="row margin-top">
         {% bootstrap_messages %}
         {% if reimb %}
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-md-offset-2">
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         {# We set the title as lennyface, in out efforts to anonimize the data.. Okay, maybe no #}
                         <h4 class="text-center">{{ reimb.hacker.email }}
-                            {#                        <a target="_blank" style="color:black; text-decoration: none;" class="pull-right fa fa-link"#}
-                            {#                           href="{% url 'app_detail' app.uuid_str %}">#}
-                            {#                        </a>#}
+                            <a target="_blank" style="color:black; text-decoration: none;" class="pull-right fa fa-link"
+                               href="{% url 'reimbursement_detail' reimb.pk %}">
+                            </a>
                         </h4>
                     </div>
                     <div class="panel-body">
@@ -32,7 +34,9 @@
                         </dl>
                         <h4 class="text-center">Reimbursement</h4>
                         <dl class="dl-horizontal">
-                            {% include 'include/field.html' with desc='Receipt' value='<a href="'|add:reimb.receipt.url|add:'" target="_blank">'|add:reimb.receipt.url|add:"</a>"|safe %}
+                            {% if reimb.receipt %}
+                                {% include 'include/field.html' with desc='Receipt' value='<a href="'|add:reimb.receipt.url|add:'" target="_blank">'|add:reimb.receipt.url|add:"</a>"|safe %}
+                            {% endif %}
                             {% include 'include/field.html' with desc='Multiple hackers covered' value=reimb.multiple_hackers|yesno %}
                             {% include 'include/field.html' with desc='Other hackers covered' value=reimb.friend_emails %}
                             {% include 'include/field.html' with desc='Assigned money' value=reimb.max_assignable_money %}
@@ -40,27 +44,29 @@
                             {% include 'include/field.html' with desc='Country' value=reimb.origin_country %}
                             {% include 'include/field.html' with desc='City' value=reimb.origin_city %}
                         </dl>
-                        <hr>
-                        <h4 class="text-center">Reject receipt</h4>
-                        <form action="" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" name="id" value="{{ reimb.pk }}"/>
-                            {% bootstrap_form reject_form layout="horizontal" %}
-                            <button name="reject" class="btn btn-danger btn-block"
-                                    value="reject">Reject
-                            </button>
+                        {% if review %}
+                            <hr>
+                            <h4 class="text-center">Reject receipt</h4>
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="id" value="{{ reimb.pk }}"/>
+                                {% bootstrap_form reject_form layout="horizontal" %}
+                                <button name="reject" class="btn btn-danger btn-block"
+                                        value="reject">Reject
+                                </button>
 
-                        </form>
-                        <hr>
-                        <h4 class="text-center">Accept receipt</h4>
-                        <form action="" method="post" class="form-horizontal">
-                            {% csrf_token %}
-                            <input type="hidden" name="id" value="{{ reimb.pk }}"/>
-                            {% bootstrap_form accept_form layout="horizontal" %}
-                            <button name="accept" class="btn btn-success btn-block"
-                                    value="accept">Accept
-                            </button>
-                        </form>
+                            </form>
+                            <hr>
+                            <h4 class="text-center">Accept receipt</h4>
+                            <form action="" method="post" class="form-horizontal">
+                                {% csrf_token %}
+                                <input type="hidden" name="id" value="{{ reimb.pk }}"/>
+                                {% bootstrap_form accept_form layout="horizontal" %}
+                                <button name="accept" class="btn btn-success btn-block"
+                                        value="accept">Accept
+                                </button>
+                            </form>
+                        {% endif %}
                     </div>
                 </div>
             </div>
