--- a/reimbursement/templates/include/reimbursement_info.html
+++ b/reimbursement/templates/include/reimbursement_info.html
@@ -5,7 +5,7 @@
     {{ reimbursement.update_time|timesince }} ago but you haven't uploaded a valid ticket. Send us an email to
     {{ h_contact_email|urlize }} if you
     think this is an error.
-{% elif reimbursement.friend_submission %}
+{% elif reimbursement.has_friend_submitted %}
     <p>Your friend {{ reimbursement.friend_submission.hacker.get_full_name }} already uploaded a receipt that covered
         your travel. Let us know if you think this is an error.</p>
 {% else %}
