add fields to reimbursement detail

--- a/reimbursement/templates/reimbursement_detail.html
+++ b/reimbursement/templates/reimbursement_detail.html
@@ -31,19 +31,30 @@
                         <dl class="dl-horizontal">
                             {% include 'include/field.html' with desc='Full name' value=reimb.hacker.nickname %}
                             {% include 'include/field.html' with desc='Email' value=reimb.hacker.email %}
+                            {% include 'include/field.html' with desc='Last update' value=reimb.update_time|naturaltime %}
+                            {% include 'include/field.html' with desc='Status' value=reimb.get_status_display %}
+                            {% include 'include/field.html' with desc='Country' value=reimb.origin_country %}
+                            {% include 'include/field.html' with desc='City' value=reimb.origin_city %}
+
                         </dl>
-                        <h4 class="text-center">Reimbursement</h4>
+                        <h4 class="text-center">Receipt</h4>
                         <dl class="dl-horizontal">
                             {% if reimb.receipt %}
                                 {% include 'include/field.html' with desc='Receipt' value='<a href="'|add:reimb.receipt.url|add:'" target="_blank">'|add:reimb.receipt.url|add:"</a>"|safe %}
                             {% endif %}
                             {% include 'include/field.html' with desc='Multiple hackers covered' value=reimb.multiple_hackers|yesno %}
                             {% include 'include/field.html' with desc='Other hackers covered' value=reimb.friend_emails %}
-                            {% include 'include/field.html' with desc='Assigned money' value=reimb.max_assignable_money %}
-                            {% include 'include/field.html' with desc='Updated' value=reimb.update_time|naturaltime %}
-                            {% include 'include/field.html' with desc='Country' value=reimb.origin_country %}
-                            {% include 'include/field.html' with desc='City' value=reimb.origin_city %}
+                            {% include 'include/field.html' with desc='Maximum assignable' value=reimb.max_assignable_money %}
                         </dl>
+                        {% if reimb.is_accepted %}
+                            <h4 class="text-center">Sending the monies</h4>
+                            <dl class="dl-horizontal">
+                                {% include 'include/field.html' with desc='Reimbursement money' value=reimb.reimbursement_money %}
+                                {% include 'include/field.html' with desc='PayPal email' value=reimb.paypal_email %}
+                                {% include 'include/field.html' with desc='Venmo user' value=reimb.venmo_user %}
+
+                            </dl>
+                        {% endif %}
 
                     </div>
                 </div>
@@ -62,7 +73,7 @@
                             <form action="" method="post">
                                 {% csrf_token %}
                                 <input type="hidden" name="id" value="{{ reimb.pk }}"/>
-                                {% bootstrap_form reject_form%}
+                                {% bootstrap_form reject_form %}
                                 <button name="reject" class="btn btn-danger btn-block"
                                         value="reject">Reject
                                 </button>
@@ -70,7 +81,7 @@
                             </form>
                             <hr>
                             <h4 class="text-center">Accept receipt</h4>
-                            <form action="" method="post" >
+                            <form action="" method="post">
                                 {% csrf_token %}
                                 <input type="hidden" name="id" value="{{ reimb.pk }}"/>
                                 {% bootstrap_form accept_form %}
