--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -110,7 +110,8 @@
                                 </button>
                             {% endif %}
                             {% if app.can_be_cancelled %}
-                                <button name="confirm" class="btn btn-info btn-block" value="confirm">Send ticket
+                                <button name="confirm" class="btn btn-info btn-block" value="confirm">Confirm & send
+                                    ticket
                                 </button>
                                 <button name="cancel" class="btn btn-danger btn-block" value="cancel">Cancel
                                 </button>
