--- a/applications/templates/mails/confirmation_message.html
+++ b/applications/templates/mails/confirmation_message.html
@@ -2,10 +2,11 @@
 {% block preheader %}Confirmation of attendance for {{ h_name }}{% endblock %}
 
 {% block content %}
-    <p>Thank you {{ name }} for confirming your attendance to  {{ h_name }}!</p>
+    <p>Thank you {{ name }} for confirming your attendance to {{ h_name }}!</p>
     <p>We are really excited to host this event and have you with us.</p>
 
-    <p>In order to make registration go smoother, please show us this QR code during the process so we can easily find you:</p>p
+    <p>In order to make registration go smoother, please show us this QR code during the process so we can easily find
+        you:</p>
     {% include 'mails/include/email_image.html' with url=qr_url %}
     {% include 'mails/include/cancel.html' %}
     {% include 'mails/include/arrival_departure_info.html' %}
