--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="panel-body">
                     <dl class="dl-horizontal">
-                        {% include 'include/field.html' with desc='Nickname' value=app.user.nickname %}
+                        {% include 'include/field.html' with desc='Name' value=app.user.name %}
                         {% include 'include/field.html' with desc='Email' value=app.user.email %}
                         {% include 'include/field.html' with desc='Shirt Size' value=app.tshirt_size %}
                         {% include 'include/field.html' with desc='Diet' value=app.diet %}
