--- a/user/templates/mails/verify_email_message.html
+++ b/user/templates/mails/verify_email_message.html
@@ -2,7 +2,7 @@
 {% block preheader %}Verify your email address{% endblock %}
 
 {% block content %}
-    <p> Hey {{ user.nickname }},</p>
+    <p> Hey {{ user.get_full_name }},</p>
     <p>You have 5 days to verify your email address for your account at {{ h_name }}</p>
     {% include 'mails/include/email_button.html' with text='Verify' url=activate_url %}
 
