--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -2,11 +2,11 @@
 {% block preheader %}Travel reimbursement award for {{ h_name }}{% endblock %}
 
 {% block content %}
-<p>    Congrats {{ app.user.nickname }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
+<p>    Congrats {{ app.user.get_full_name }}, you have been granted travel reimbursement for this edition of {{ h_name }}. We will
     reimburse you <b>{{ reimb.assigned_money }}{{ h_currency }}</b> as you are coming from {{ reimb.origin_city }} ({{ reimb.origin_country }}).
     <b>You have {{ h_r_days }} days to submit a receipt of your tickets.</b>
 </p>
-    {% include 'include/../../../app/templates/mails/include/email_button.html' with text='Submit receipt' url=form_url %}
+    {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
     <p>
     If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
