--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,7 @@
 
                 <ul class="nav navbar-nav navbar-right ">
                     {% if request.user.is_authenticated %}
-                        {% if request.user.is_director %}
+                        {% if request.user.is_admin %}
                             <li class="{% if request.resolver_match.url_name == "admin:index" %}active{% endif %}"><a
                                     href="{% url 'admin:index' %}">Admin</a></li>
                         {% endif %}
