--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -96,25 +96,27 @@
                                     {% endif %}
                                 </ul>
                             </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                   aria-haspopup="true" aria-expanded="false">Reimbursements <span
-                                        class="caret"></span></a>
-                                <ul class="dropdown-menu">
+                            {% if h_r_enabled %}
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                       aria-haspopup="true" aria-expanded="false">Reimbursements <span
+                                            class="caret"></span></a>
+                                    <ul class="dropdown-menu">
 
-                                    <li class="{% if request.resolver_match.url_name == "reimbursement_list" %}active{% endif %}">
-                                        <a href="{% url 'reimbursement_list' %}">List</a>
-                                    </li>
-                                    <li class="{% if request.resolver_match.url_name == "receipt_review" %}active{% endif %}">
-                                        <a href="{% url 'receipt_review' %}">Review receipts</a>
-                                    </li>
-                                    {% if request.user.is_director %}
-                                        <li class="{% if request.resolver_match.url_name == "send_reimbursement" %}active{% endif %}">
-                                            <a href="{% url 'send_reimbursement' %}">Send reimbursements</a>
+                                        <li class="{% if request.resolver_match.url_name == "reimbursement_list" %}active{% endif %}">
+                                            <a href="{% url 'reimbursement_list' %}">List</a>
                                         </li>
-                                    {% endif %}
-                                </ul>
-                            </li>
+                                        <li class="{% if request.resolver_match.url_name == "receipt_review" %}active{% endif %}">
+                                            <a href="{% url 'receipt_review' %}">Review receipts</a>
+                                        </li>
+                                        {% if request.user.is_director %}
+                                            <li class="{% if request.resolver_match.url_name == "send_reimbursement" %}active{% endif %}">
+                                                <a href="{% url 'send_reimbursement' %}">Send reimbursements</a>
+                                            </li>
+                                        {% endif %}
+                                    </ul>
+                                </li>
+                            {% endif %}
                         {% endif %}
                         {% if request.user.is_organizer or request.user.is_volunteer %}
                             <li class="{% if request.resolver_match.url_name == "check_in_list" %}active{% endif %}"><a
