--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
     {% endif %}
     <meta name="author" content="{{ h_name }}">
     <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <meta name="description" content="{{ h_description }}">
 
 
