--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -20,7 +20,7 @@
                     <div class="panel-body">
                         {% if filter %}
                             <form action="" method="get" class="form form-inline text-left filter">
-                                {% bootstrap_form filter.form size='small' %}
+                                {% bootstrap_form filter.form size='small' set_placeholder="True" layout="inline" %}
                                 {% bootstrap_button 'Search' size='small' button_class='btn-info' %}
                             </form>
                         {% endif %}
