--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -14,15 +14,15 @@
     {% else %}
         <h1>Sign up</h1>
         {% if h_app_timeleft %}
-            <h3>Application deadline:{% include 'include/deadline_countdown.html' %}</h3>
+            <p class="lead">Application deadline:{% include 'include/deadline_countdown.html' %}</p>
         {% endif %}
+
         <form action="" method="post" class="form form-horizontal">
             {% csrf_token %}
             {% bootstrap_form form layout="horizontal" %}
             <button class="btn btn-primary btn-block" type="submit">{% trans "Sign Up" %}</button>
             <a class="btn btn-default btn-block"
                href="{% url 'account_login' %}">{% trans "...or log in if you already have an account " %}</a>
-
         </form>
     {% endif %}
 
